src/objects/Account_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Mapping</label>
    <nameField>
        <displayFormat>AccountMapping-{000000}</displayFormat>
        <label>Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>